<resources>
    <string name="app_name">ProjectSashimi</string>

    <!-- Dev Buttons -->
    <string name="btn_devnext">Dev Next</string>
    <string name="btn_devswiperight">Dev Swipe R</string>
    <string name="btn_devswipeup">Dev Swipe U</string>
    <string name="btn_devswipedown">Dev Swipe D</string>
    <string name="btn_devback">Dev Back</string>
    <string name="btn_devnomoreoptions">Dev No More Options</string>
    <string name="btn_devselectrestaurant">Dev Select Restaurant</string>
    <!-- ========================= -->

    <!-- Template Strings -->
    <string name="temp_header">Header</string>
    <string name="temp_devnote">Dev Note</string>
    <string name="temp_devbtn">Button</string>
    <!-- ========================= -->

    <!-- m0_entrynoacc_frag_layout -->
    <string name="header_0a">No Account Mode</string>
    <string name="prompt_0a">Eating Alone or With Friends?</string>
    <string name="btn_0a">GO SOLO</string>
    <string name="btn_0b">GO WITH\nFRIENDS</string>
    <!-- ========================= -->

    <!-- m1_activity_layout -->
    <string name="header_1a">No Account Solo Mode</string>
    <!-- ========================= -->

    <!-- m1_prefselect_frag_layout -->
    <string name="header_2a">Pref Select Page</string>
    <string name="devnote_2a">To do:\nAdd Preference Selection Form</string>
    <string name="distance_label">Distance:</string>
    <string name="term_label">Search For:</string>
    <string name="btn_search">Search</string>
    <string name="term_input">Food</string>
    <!-- ========================= -->

    <!-- m1_swipedash_frag_layout-->
    <string name="header_3a">Solo SwipeDash</string>
    <string name="devnote_3a">To do:\nAdd Swipe Action</string>
    <!-- ========================= -->

    <!-- m1_nomoreoptions_frag_popup -->
    <string name="header_4a">Expand Search or Go to Favorites</string>
    <string name="devnote_4a">Search range expand widget here</string>
    <string name="btn_4a">Go to Favorites</string>
    <string name="btn_4b">OK</string>
    <!-- ========================= -->

    <!-- m1_details_frag_layout -->
    <string name="header_5a">Restaurant Details</string>
    <string name="devnote_5a">Details on current Restaurant Card\n(Info from yelp?)</string>
    <!-- ========================= -->

    <!-- m1_favorites_frag_layout -->
    <string name="header_6a">Favorites</string>
    <string name="devnote_6a">Previously right swiped restaurants\n(Some kind of list format?)</string>
    <!-- ========================= -->

    <!-- m1_favdetails_frag_layout -->
    <string name="header_7a">Favorite Restaurant Details</string>
    <string name="devnote_7a">Details on selected favorited restaurant\n(Info from yelp?)</string>
    <string name="btn_7a">Show on Map</string>
    <!-- ========================= -->

    <!-- m1_map_frag_layout -->
    <string name="header_8a">Map</string>
    <string name="devnote_8a">Map of chosen restaurant w/ user location </string>
    <string name="btn_8a">Start Over</string>
    <!-- ========================= -->

    <!-- m1_startoverwarning_frag_layout -->
    <string name="header_9a">Are you sure you want to start over?</string>
    <string name="devnote_9a">Data will be lost</string>
    <string name="btn_9a">Yes</string>
    <string name="btn_9b">No</string>
    <!-- ========================= -->

    <string name="placeholder">Placeholder</string>

</resources>
