<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".M1_NoAccSoloMode.M1_PrefSelect_Frag">

    <TextView
        android:id="@+id/header_6a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/header_6a" />

    <TextView
        android:id="@+id/devnote_6a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/devnote_6a" />

    <TextView
        android:id="@+id/btn_devback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/textview_border"
        android:text="@string/btn_devback" />

</RelativeLayout>